# GolaemForUSD

./: CMakeLists.txt  HYDRA.md
src/: glmUSD.h
src/hdgp/: cube_per_mesh.cpp  fbxMeshAdapter.cpp  fbxMeshAdapter.h  fileMeshAdapter.cpp  fileMeshAdapter.h  fileMeshInstance.cpp  fileMeshInstance.h  furAdapter.cpp  furAdapter.h  golaemHydra.cpp  golaem_hydra.cpp  hydraGlobals.cpp  hydraGlobals.h  hydraTools.cpp  hydraTools.h  meshDataSourceBase.h
src/procedural/: glmUSDData.h  glmUSDDataImpl.cpp  glmUSDDataImpl.h  glmUSDFileFormat.cpp  plugInfo.json
